--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,12 @@
 <div class="page-header">
   <h1> Home </h1>
 </div>
-
+<p>
+  <%= link_to "New Text Post", new_text_post_path,
+              class: "btn btn-default" %>
+</p>
+<p>
+  <%= link_to "New Image Post", new_image_post_path,
+              class: "btn btn-default" %>
+</p>
 <%= render @posts %>
